Checkpoint. Progress towards identifying positions with good trench detections.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180205 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180205 Prototyping.ipynb
@@ -185,7 +185,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{k: v[\"\"] for k, v in diag_pos.items() if k not in none_pos}"
+    "rot = {\n",
+    "    k: v[\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"]\n",
+    "    for k, v in diag_pos.items()\n",
+    "    if k not in none_pos\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(rot.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spacings1 = {\n",
+    "    k: v[\"label_1\"][\"trench_anchors\"][\"periodogram_2\"][\"period\"]\n",
+    "    for k, v in diag_pos.items()\n",
+    "    if k not in none_pos\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist([v for v in spacings1.values() if v < 50], bins=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rot_spacing = {\n",
+    "    k: (\n",
+    "        v[\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"],\n",
+    "        v[\"label_1\"][\"trench_anchors\"][\"periodogram_2\"][\"period\"],\n",
+    "    )\n",
+    "    for k, v in diag_pos.items()\n",
+    "    if k not in none_pos\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.scatter(*zip(*rot_spacing.values()), s=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag_pos[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag_pos[0][\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(rot1)"
    ]
   },
   {
