Reorganized notebook, preparing to start working on trench segmentation.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180206 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180206 Prototyping.ipynb
@@ -148,15 +148,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Compute"
+    "# Trench detection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "diag_pos = tree()\n",
@@ -173,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "none_pos = [k for k, v in trench_points_pos.items() if v is None]"
@@ -182,14 +188,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "good_pos = [\n",
     "    k\n",
     "    for k, v in diag_pos.items()\n",
     "    if trench_points_pos[k] is not None\n",
-    "    and -5 < v[\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"] < 5\n",
+    "    and -5 < v[\"label_1\"][\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"] < 5\n",
     "    and 21 < v[\"label_1\"][\"trench_anchors\"][\"periodogram_2\"][\"period\"] < 26\n",
     "]"
    ]
@@ -197,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "len(good_pos)"
@@ -206,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "rot = {\n",
@@ -219,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.hist(rot.values())"
@@ -228,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "spacings1 = {\n",
@@ -241,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.hist([v for v in spacings1.values() if v < 50], bins=50)"
@@ -250,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "rot_spacing = {\n",
@@ -266,7 +286,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 12))\n",
@@ -276,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "diag_pos[0]"
@@ -285,7 +309,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "diag_pos[0][\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"]"
@@ -294,7 +320,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "len(rot1)"
@@ -303,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "none_pos"
@@ -312,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "diag = tree()\n",
@@ -322,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "display_plot_browser(diag)"
@@ -331,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "frame_stream = FrameStream()\n",
@@ -342,22 +378,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "big_image_viewer(root_group[\"quantized\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "sharpness = np.array(\n",
-    "    [image_sharpness(frame_series[i]) for i in range(frame_series.shape[0])]\n",
-    ")"
    ]
   },
   {
@@ -553,69 +579,43 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# Image viewers"
+    "# Trench segmentation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "init_cell": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# big_image_viewer(root_group['quantized'])"
+    "pos = 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def overlay_image_viewer(frames):\n",
-    "    frame_stream = FrameStream()\n",
-    "    slider_box = frame_browser(frames, frame_stream)\n",
-    "    channels_box, display_settings_stream = multichannel_selector(frames)\n",
-    "\n",
-    "    def image_callback(t, v, channel_enabled, channel_colors):\n",
-    "        channel_imgs = [\n",
-    "            frames[v, c, t, :, :] for c in range(frames.shape[1]) if channel_enabled[c]\n",
-    "        ]\n",
-    "        img = composite_channels(channel_imgs, select(channel_colors, channel_enabled))\n",
-    "        viewer = hv.RGB(img[::-1], bounds=(0, 0, img.shape[1], img.shape[0]))\n",
-    "        return viewer\n",
-    "\n",
-    "    image = hv.DynamicMap(\n",
-    "        image_callback, streams=[frame_stream, display_settings_stream]\n",
-    "    )\n",
-    "    image = regrid(image)\n",
-    "    image = image.opts(plot={\"width\": 500, \"height\": 500})\n",
-    "    output = widgets.Output()\n",
-    "    box = widgets.VBox([widgets.HBox([channels_box, slider_box]), output])\n",
-    "    display(box)\n",
-    "    with output:\n",
-    "        display(image)\n",
-    "    return None\n",
-    "\n",
-    "\n",
-    "overlay_image_viewer(frames_z)"
+    "diag_td = tree()\n",
+    "trench_points = get_trenches(root_group[\"raw\"][str(0)][0, 30], diagnostics=diag_td)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "hideCode": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display_plot_browser(diag_td);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%opts Image (cmap='viridis')\n",
@@ -732,9 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def trench_peaks_callback(t, y):\n",
@@ -755,9 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -777,13 +773,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for t in range(kymo.shape[1] // 5):\n",
     "    plt.plot(kymo[220:, t])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image viewers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "# big_image_viewer(root_group['quantized'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def overlay_image_viewer(frames):\n",
+    "    frame_stream = FrameStream()\n",
+    "    slider_box = frame_browser(frames, frame_stream)\n",
+    "    channels_box, display_settings_stream = multichannel_selector(frames)\n",
+    "\n",
+    "    def image_callback(t, v, channel_enabled, channel_colors):\n",
+    "        channel_imgs = [\n",
+    "            frames[v, c, t, :, :] for c in range(frames.shape[1]) if channel_enabled[c]\n",
+    "        ]\n",
+    "        img = composite_channels(channel_imgs, select(channel_colors, channel_enabled))\n",
+    "        viewer = hv.RGB(img[::-1], bounds=(0, 0, img.shape[1], img.shape[0]))\n",
+    "        return viewer\n",
+    "\n",
+    "    image = hv.DynamicMap(\n",
+    "        image_callback, streams=[frame_stream, display_settings_stream]\n",
+    "    )\n",
+    "    image = regrid(image)\n",
+    "    image = image.opts(plot={\"width\": 500, \"height\": 500})\n",
+    "    output = widgets.Output()\n",
+    "    box = widgets.VBox([widgets.HBox([channels_box, slider_box]), output])\n",
+    "    display(box)\n",
+    "    with output:\n",
+    "        display(image)\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "overlay_image_viewer(frames_z)"
    ]
   },
   {
